--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -59,7 +59,7 @@
 <string name="lblCatTimes">Temps et type de vols</string>
 <string name="lblCatOverall">Information Générale sur le vol</string>
 <string name="lblCatCockpit">Dans le cockpit</string>
-<string name="lblCatSharing">Images et partage</string>
+<string name="lblCatSharing">Partage</string>
 <string name="lblFacebook">Partager le vol sur Facebook</string>
 <string name="lblTwitter">Partager le vol sur Twitter</string>
 <string name="lblMyFlightbook">Partager le vol sur  MyFlightbook</string>
@@ -228,7 +228,8 @@
 
 <!-- Image Content Descriptions -->
 <string name="cdTakePicture">Take or choose a picture</string>
-<string name="cdImagesForFlight">Images for flight</string>
+<string name="cdImagesForFlight">Images pour le vol</string>
+<string name="cdImagesForAircraft">Images pour avions</string>
 <string name="cdHasImages">Item has images</string>
 <string name="cdMapMarker">Marker on map</string>
 <string name="cdImageInfo">Flight Image</string>
