More code analysis cleanup  - Removed empty XML tags  - ExpandableListfragment has a ton of unused code, but I don't want to remove it so I suppress a lot of it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -487,7 +487,7 @@
     <string name="ccPoweredParaglider">Powered Paraglider</string>
 
     <!-- Empty string -->
-    <string name="strEmpty"></string>
+    <string name="strEmpty" />
 
     <!-- Approach Helper -->
     <string name="ahApproachHelper">Details for Instrument Approaches:</string>
