--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -487,7 +487,7 @@
     <string name="ccPoweredParaglider">Paramoteur</string>
 
     <!-- Empty string -->
-    <string name="strEmpty"></string>
+    <string name="strEmpty" />
 
     <!-- Approach Helper -->
     <string name="ahApproachHelper">Détails pour Approches aux instruments::</string>
