--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="UserName">Please type your email address:</string>
     <string name="Password">Please type your password</string>
-    <string name="signin">Sign in Securely</string>
+    <string name="signin">Sign in</string>
 
     <string name="signInPrompt">You need to have an account on MyFlightbook.com to use MyFlightbook for Android.</string>
     <string name="statusNotSignedIn">You are not currently signed in.  Please sign in or create an account.</string>
