--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="lblOK">OK</string>
     <string name="lblCancel">Annuler</string>
     <string name="lblConfirm">Confirmer</string>
@@ -309,7 +309,6 @@
     <string name="recent2Years">2 dernières années</string>
     <string name="recent3Years">3 dernières années</string>
     <string name="recent5Years">5 dernières années</string>
-    <string name="numResultsShownTemplate">%d vols</string>
     <string name="allResultsShown">Tous les vols</string>
 
     <!-- Auto-fill options -->
@@ -454,8 +453,11 @@
     <!--  Visited Airports -->
     <string name="AllAirports">Tous les aéroports</string>
     <string name="vaSingleVisit">1 visite au %s</string>
-    <string name="vaMultiVisit">%1$d visites du %2$s au %3$s</string>
-    <string name="vaUniqueAirports">(%d aéroports trouvés)</string>
+    <string name="vaMultiVisit" tools:ignore="PluralsCandidate">%1$d visites du %2$s au %3$s</string>
+    <plurals name="uniqueAirportsCount">
+        <item quantity="one">(%1$d aéroport trouvés)</item>
+        <item quantity="other">(%1$d aéroports trouvés)</item>
+    </plurals>
 
     <!--  Training -->
     <string name="lblEndorsements">Endossements</string>
