Added support to match iOS with properties:  - Can edit properties directly from within the new flight screen  - Can press-and-hold to make properties be favorites.  - Eliminated the text display of properties.  - fixed toString in flightproperty to work even when m_cpt is null  - Cleaned up dlgeditprop

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -50,13 +50,14 @@
     <string name="lblHobbsEnd">Fin Hobbs</string>
     <string name="lblEngineEnd">Arrêt Moteur</string>
     <string name="lblFlightEnd">Fin de Vol</string>
-    <string name="lblProperties">Caractéristiques…</string>
+    <string name="lblProperties">Caractéristiques du vol…</string>
     <string name="lblCurrentProps">Caractéristiques du vol:</string>
     <string name="lblCatApproachesAndLandings">Atterrissages et Approches</string>
-    <string name="lblCatTimes">Temps et type de vols</string>
+    <string name="lblCatTimes">Temps de vols</string>
     <string name="lblCatOverall">Information Générale sur le vol</string>
     <string name="lblCatCockpit">Dans le cockpit</string>
     <string name="lblCatSharing">Partage</string>
+    <string name="lblCatProperties">Caractéristiques du vol</string>
     <string name="lblFacebook">Partager le vol sur Facebook</string>
     <string name="lblTwitter">Partager le vol sur Twitter</string>
     <string name="lblMyFlightbook">Partager le vol sur  MyFlightbook</string>
