Added a time calculator.  Press-and-hold on totals to launch it, lets you add additional flight segments to your total time (i.e., just makes the math easier).
Shows an equation using decimal or hh:mm.  You can copy the value to the clipboard, or just hit back.

Had to modify DecimalEdit to include a force flag to force HH:MM.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -455,4 +455,12 @@
     <string name="ahApproachAirport">Airport</string>
     <string name="ahAddToTotals">Add to total approach count</string>
 
+    <!-- Time calculator -->
+    <string name="tcAddTimeRangePrompt">If you fly multiple segments in a single entry, you can add them up here.</string>
+    <string name="tcAddTimeStartPrompt">Segment Start:</string>
+    <string name="tcAddTimeEndPrompt">Segment End:</string>
+    <string name="tcCopyResult">Copy</string>
+    <string name="tcAddSegement">Add</string>
+    <string name="tcAddSegmentAndUpdate">Update</string>
+    <string name="tcErrBadTime">Times must be between 00:00 and 24:00</string>
 </resources>
