--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -455,4 +455,12 @@
     <string name="ahApproachAirport">Aéroport</string>
     <string name="ahAddToTotals">Ajouter au nombre total d\'approches</string>
 
+    <!-- Time calculator -->
+    <string name="tcAddTimeRangePrompt">Si vous lancez plusieurs segments dans une seule entrée, vous pouvez les ajouter ici.</string>
+    <string name="tcAddTimeStartPrompt">Début du segment:</string>
+    <string name="tcAddTimeEndPrompt">Fin de segment:</string>
+    <string name="tcCopyResult">Copie</string>
+    <string name="tcAddSegement">Ajouter</string>
+    <string name="tcAddSegmentAndUpdate">Mettre à jour</string>
+    <string name="tcErrBadTime">Les horaires doivent être entre 00:00 et 24:00</string>
 </resources>
