Woops - typo in name of string

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -460,7 +460,7 @@
     <string name="tcAddTimeStartPrompt">Début du segment:</string>
     <string name="tcAddTimeEndPrompt">Fin de segment:</string>
     <string name="tcCopyResult">Copie</string>
-    <string name="tcAddSgement">Ajouter</string>
+    <string name="tcAddSegment">Ajouter</string>
     <string name="tcAddSegmentAndUpdate">Mettre à jour</string>
     <string name="tcErrBadTime">Les horaires doivent être entre 00:00 et 24:00</string>
 </resources>
