--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,6 +23,8 @@
     <string name="lblOptUseHHMM">Entrez durées en format hh:mm</string>
     <string name="lblOptUseLocalTime">Utiliser l\'heure locale</string>
     <string name="lblOptTOSpeed">La vitesse de décollage (Kts)</string>
+    <string name="lblImageOptions">Options d\'image</string>
+    <string name="lblShowFlightImages">Afficher les images pour les vols</string>
 
     <string name="lblRoute">Trajet</string>
     <string name="lblAppendNearest">le plus proche</string>
