Issue #49: Change the Save button to do GPX instead of KML, get full-resolution from the server (or use pending/existing flight data).   - New support for FlightPathForFlightGPX in RecentFlightsSvc   - New getFlightDataStringAsGPX in LocSample   - Request permissions to write to external storage, if they have no already been granted.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -267,6 +267,10 @@
 
     <string name="txtUpdateRouteOnMap">Mise à jour</string>
     <string name="txtShareKML">Envoyer KML pour…</string>
+    <string name="txtShareGPX">Envoyer GPX pour…</string>
+    <string name="txtFileNameExisting">Vol </string>
+    <string name="txtFileNameNew">Nouveau vol</string>
+    <string name="txtFileNamePending">Vol en attente</string>
 
     <string name="lblPreviouslyUsed">Préf</string>
 
