Issue #4 and #54: register for and import GPX and KML.
A bit of a hack, but this more or less follows the iOS model.  An abstract Telemetry base class, with two subclasses (GPXReader and KMLReader) that can read GPX and KML, respectively.

The hacky bits come from the fact that MFBMain has to respond to the incoming import request, including requesting read permissions.  Also because autototals is baked into ActNewFlight, I had to (slightly) re-invent auto-fill of cross-country and auto-fill of totals.

This does NOT handle all of the many flavors of KML.  KML without timestamps is useless and ignored.  Even KML with timestamps requires speed to be derived.

Still need to move export into these classes (despite saying "reader")

Fixed a few things, including:
 - Using the passed loc for takeoff/landing, rather than the current loc
 - LocSample had no getLocation method to return a Location object.
 - MFBLocation now has a flag to suppress recording, so that we don't overwrite an in-progress flight's telemetry with imported telemetry.  (We attach the raw imported telemetry afterwards)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -476,4 +476,12 @@
     <string name="tcAddSegment">Add</string>
     <string name="tcAddSegmentAndUpdate">Update</string>
     <string name="tcErrBadTime">Times must be between 00:00 and 24:00</string>
-</resources>
+
+    <!-- Telemetry Import -->
+    <string name="telemetryImportPrompt">Initialize a flight from the imported flight track data?</string>
+    <string name="telemetryImportProgress">Importing...</string>
+    <string name="telemetryImportDefaultComment">Flight created from GPS data</string>
+    <string name="telemetryNothingFound">Unable to detect any takeoffs/landings in the supplied data.</string>
+    <string name="telemetryImportSuccessful">Flight created; you can edit it in your recent flights</string>
+    <string name="telemetryCantIdentify">Unrecognized GPS data format.</string>
+s</resources>
