--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -476,4 +476,12 @@
     <string name="tcAddSegment">Ajouter</string>
     <string name="tcAddSegmentAndUpdate">Mettre à jour</string>
     <string name="tcErrBadTime">Les horaires doivent être entre 00:00 et 24:00</string>
+
+    <!-- Telemetry Import -->
+    <string name="telemetryImportPrompt">Initialiser un vol de la trajectoire de vol importé?</string>
+    <string name="telemetryImportProgress">Importer...</string>
+    <string name="telemetryImportDefaultComment">Vol créé à partir des données GPS</string>
+    <string name="telemetryNothingFound">Impossible de détecter les décollages / atterrissages dans les données fournies.</string>
+    <string name="telemetryImportSuccessful">Vol créé vous pouvez l\'éditer dans vos récents vols</string>
+    <string name="telemetryCantIdentify">Format de données GPS non reconnu.</string>
 </resources>
