--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,6 +200,7 @@
     <string name="prgSigningIn">Signing in…</string>
     <string name="prgCreatingAccount">Creating Account…</string>
     <string name="prgSavingFlight">Saving Flight…</string>
+    <string name="prgSavingFlights">Saving Flight %1$d of %2$d</string>
     <string name="prgDeletingFlight">Deleting Flight…</string>
     <string name="prgNewAircraft">Saving Aircraft…</string>
     <string name="prgMakes">Retrieving available makes and models…</string>
