--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -25,8 +25,9 @@
     <string name="lblOptUseHHMM">Entrez durées en format hh:mm</string>
     <string name="lblOptUseLocalTime">Utiliser l\'heure locale</string>
     <string name="lblOptTOSpeed">La vitesse de décollage (Kts)</string>
-    <string name="lblImageOptions">Options d\'image</string>
+    <string name="lblImageOptions">Affichage du vol</string>
     <string name="lblShowFlightImages">Afficher les images pour les vols</string>
+    <string name="lblShowFlightTimes">Afficher les heures de vol</string>
 
     <string name="lblRoute">Trajet</string>
     <string name="lblAppendNearest">le plus proche</string>
@@ -34,6 +35,7 @@
     <string name="lblAddApproaches">Ajouter des approches</string>
     <string name="lblComments">Commentaires</string>
     <string name="lblLandings">Total</string>
+    <string name="lblLandingsAlt">Atterrissages</string>
     <string name="lblFSDayLandings">Jour\n(Complet)</string>
     <string name="lblFSNightLandings">Nuit\n(Complet)</string>
     <string name="lblApproaches">Approches</string>
