--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,9 @@
     <string name="lblOptUseHHMM">Enter times in HH:MM format</string>
     <string name="lblOptUseLocalTime">Use Local Time</string>
     <string name="lblOptTOSpeed">Takeoff speed (Kts)</string>
-    <string name="lblImageOptions">Image Options</string>
+    <string name="lblImageOptions">Flight display Options</string>
     <string name="lblShowFlightImages">Show images for flights</string>
+    <string name="lblShowFlightTimes">Show times for flights</string>
 
     <string name="lblRoute">Route</string>
     <string name="lblAppendNearest">Nearest</string>
@@ -34,6 +35,7 @@
     <string name="lblAddApproaches">Add Approaches</string>
     <string name="lblComments">Comments</string>
     <string name="lblLandings">Total</string>
+    <string name="lblLandingsAlt">Landings</string>
     <string name="lblFSDayLandings">Day\n(Full Stop)</string>
     <string name="lblFSNightLandings">Night\n(Full Stop)</string>
     <string name="lblApproaches">Approaches</string>
