Issue #11: add support for canned queries.
Although CannedQuery is properly a subclass of FlightQuery, I put QueryName into the FlightQuery object...

Also fixed a bug with visibility in CustomPropertyType and with safe parsing of a possibly missing Description

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -418,6 +418,11 @@
     <string name="fqDateEndDate">End Date</string>
     <string name="fqDateCustom">Custom</string>
     <string name="fqProperties">Properties</string>
+    <string name="fqQueryNameHeaderDesc">Provide a name for this query, or select from previously named queries</string>
+    <string name="fqQueryNamePrompt">Name</string>
+    <string name="fqQueryNameHeader">Saved Queries</string>
+    <string name="fqQueryDeleteConfirm">Are you sure you want to delete this query?  This cannot be undone</string>
+    <string name="fqQueryDeleteShort">Delete</string>
 
     <string name="menuFlightSearch">Find Flights</string>
     <string name="fqStatusAllFlights">(All flights included)</string>
