--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -418,6 +418,11 @@
     <string name="fqDateEndDate">Date de fin</string>
     <string name="fqDateCustom">Période sélectionnée</string>
     <string name="fqProperties">Caractéristiques</string>
+    <string name="fqQueryNameHeaderDesc">Donnez un nom à cette requête ou sélectionnez des requêtes précédemment nommées</string>
+    <string name="fqQueryNamePrompt">Nom</string>
+    <string name="fqQueryNameHeader">Requêtes enregistrées</string>
+    <string name="fqQueryDeleteConfirm">Êtes-vous sûr de vouloir supprimer cette requête? Ça ne peut pas être annulé.</string>
+    <string name="fqQueryDeleteShort">Effacer</string>
 
     <string name="menuFlightSearch">Trouver les vols</string>
     <string name="fqStatusAllFlights">(Tous les vols)</string>
